# projeto-cadastro

./: clientes.csv  pyproject.toml
