[project]
name = "projeto-cadastro"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao Victor",email = "joaovictor.petinelli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.44.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
